ktp-text-ui (0.6.2.1-1) UNRELEASED; urgency=low

  [ Ritesh Raj Sarraf ]
  * [e26f6a8] drop patch 03_no_redundant_glib_calls.diff
  * [459ee64] Drop tests, for now, as they are failing

  [ Diane Trout ]
  * Update watch file as KDE-Telepathy is now in stable release.
  * Bump ktp-common-internals version
  * Plasma-widget-telpathy-chat was moved to ktp-desktop-applet
  * Add telepathy-logger dependency
  * Imported Upstream version 0.6.2.1
  * Refresh patches
  * Bump ktp-common-internal dependency
  * Set Uploaders to Diane Trout and Michał Zając
  * Update to Standards-Version 3.9.4. No changes needed.
  * Add several plugins to kde-telepathy-text-ui.install

 -- Diane Trout <diane@ghic.org>  Fri, 12 Jul 2013 23:48:53 -0700

ktp-text-ui (0.4.0-1) unstable; urgency=low

  * Initial release.

 -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Mon, 18 Jun 2012 22:27:06 +0300