@@ -15,6 +15,7 @@ ktp-text-ui (0.6.2.1-1) UNRELEASED; urgency=low
   * Set Uploaders to Diane Trout and Michał Zając
   * Update to Standards-Version 3.9.4. No changes needed.
   * Add several plugins to kde-telepathy-text-ui.install
+  * Add description to 02_ktpchat_soversion.diff
 
  -- Diane Trout <diane@ghic.org>  Fri, 12 Jul 2013 23:48:53 -0700
 
